--- a/requirement.html
+++ b/requirement.html
@@ -48,7 +48,7 @@
   <div class="row">
     <div class="col-md-12 text-center pd20">
       <a href="#" class="round_nav active"> <span class="vertical_align"> Requirements <br />Check</span></a>
-      <a href="#" class="round_nav"> <span class="vertical_align"> Opportunity <br />Interest</span></a>
+      <a href="opportunity.html" class="round_nav"> <span class="vertical_align"> Opportunity <br />Interest</span></a>
       <a href="#" class="round_nav"> <span class="vertical_align"> About <br />You</span></a>
       <a href="#" class="round_nav"> <span class="vertical_align"> Final <br />Application <br />Review</span></a>
       <a href="#" class="round_nav"> <span class="vertical_align"> Submit <br />Application</span></a>
@@ -57,14 +57,14 @@
     <!-- /.col-md-12 -->
   </div>  <!-- /.row -->
   <div class="row pad-b title_shadow">
-    <div class="column-md-8 col-md-offset-1">
+    <div class="col-md-8 col-md-offset-1">
     <h2 class="big_title mb0">Do you have what it takes to Franchise with us?</h2>
     <p class="red">Choose the appropriate checklist, then review the requirements to see if you’re ready to apply.</p>
     </div>
-    <!-- /.column-md-8.col-md-offset-1 -->
+    <!-- /.col-md-8.col-md-offset-1 -->
   </div> <!-- /.row -->
   <div class="row">
-    <div class="column-md-8 col-md-offset-1">
+    <div class="col-md-10 col-md-offset-1">
       <div class="criteria_lists">
         <div class="criteria_list">
           <div class="location icons_images">&nbsp;</div>
@@ -96,14 +96,14 @@
         </div> <!-- /.criteria_list -->
 
       </div> <!-- /.criteria_lists -->
-    </div> <!-- /.column-md-12 -->
+    </div> <!-- /.col-md-12 -->
   </div>
   <!-- /.row -->
   <div class="row">
-    <div class="column-md-8 col-md-offset-1">
+    <div class="col-md-8 col-md-offset-1">
       <h3 class="big_title">Do you meet all the requirements?</h3>
       <a href="#" class="red_button_bg">I’M READY TO APPLY</a>
-    </div> <!-- /.column-md-8.col-md-offset-1 -->
+    </div> <!-- /.col-md-8.col-md-offset-1 -->
   </div> <!-- /.row -->
 </div> <!-- /.container -->
 
